# youtube-summarizer

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: api.rst  conf.py  index.rst  phase2-frame-extraction-design.md  requirements.txt
docs/decisions/: ADR-001-toolchain.md
docs/guides/: installation.rst  usage.rst
src/youtube_summarizer/: __init__.py  __main__.py  cli.py  config.py  downloader.py  framer.py  illustrator.py  transcript.py  writer.py
src/youtube_summarizer/providers/: __init__.py  base.py  claude.py  gemini.py
tests/: conftest.py  test_cli.py  test_cli_illustrate.py  test_downloader.py  test_framer.py  test_illustrator.py  test_transcript.py  test_writer.py
tests/test_providers/: test_base.py  test_claude.py  test_factory.py  test_gemini.py
