[project]
name = "youtube-summarizer"
version = "0.1.0"
description = "Turn YouTube videos into illustrated-ebook markdown summaries with Claude"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alvaro Carvalho", email = "alvarocarvalho.a@gmail.com" }]
requires-python = ">=3.12"
keywords = ["youtube", "summarizer", "claude", "anthropic", "ai", "transcript", "ebook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.50.0",
    "yt-dlp>=2024.10.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/caalvaro/youtube-summarizer"
Documentation = "https://youtube-summarizer.readthedocs.io"
Repository = "https://github.com/caalvaro/youtube-summarizer"
"Bug Tracker" = "https://github.com/caalvaro/youtube-summarizer/issues"
Changelog = "https://github.com/caalvaro/youtube-summarizer/blob/main/CHANGELOG.md"

[project.scripts]
youtube-summarizer = "youtube_summarizer.cli:app"

# ---------------------------------------------------------------------------
# Build backend
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_summarizer"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "README.md",
]

# ---------------------------------------------------------------------------
# Dependency groups (PEP 735 -- native uv support)
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "types-python-dotenv>=1.0",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=3.0",
]

# ---------------------------------------------------------------------------
# Ruff -- linting + formatting
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
    "ANN",  # flake8-annotations
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN101",  # missing type annotation for `self`
    "ANN102",  # missing type annotation for `cls`
    "ANN401",  # allow typing.Any where necessary
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["youtube_summarizer"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# Mypy -- static type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["yt_dlp.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest + coverage
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=youtube_summarizer",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-v",
]

[tool.coverage.run]
source = ["src/youtube_summarizer"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "if __name__ == .__main__.:",
]
